<resources>
    <string name="app_name">Toasty Numbers Challenge</string>
    <string name="logo_description">Toasty Numbers Challenge</string>
    <string name="button_settings_description">SETTINGS</string>
    <string name="button_play">Play</string>
    <string name="button_endless">ENDLESS</string>
    <string name="button_statistics">STATISTICS</string>
    <string name="button_rankings">RANKINGS</string>
    <string name="button_play_description">Play</string>
    <string name="button_endless_description">ENDLESS</string>
    <string name="button_statistics_description">STATISTICS</string>
    <string name="button_rankings_description">RANKINGS</string>
    <string name="ticker_one">2</string>
    <string name="ticker_two">2</string>
    <string name="ticker_result">5</string>
    <string name="equals">" = "</string>
    <string name="ticker_operator">" + "</string>
    <string name="back_arrow_description">Back\n</string>
    <string name="auto_answer">Auto Answer</string>
    <string name="auto_answer_description">Equations will automatically be checked as soon as enough digits have been entered.</string>
    <string name="sound">Sound</string>
    <string name="sound_description">Enable / Disable Sounds</string>
    <string name="vibration">Vibration</string>
    <string name="vibration_description">Enable / Disable Vibrations.</string>
    <string name="sign_out">Sign Out</string>
    <string name="sign_in">Google Account</string>
    <string name="sign_in_description">Sign in with Google to share your score with friends and gain access to rankings.</string>
    <string name="reset">Reset</string>
    <string name="reset_description">Reset all game data.</string>
    <string name="answer_hint">The answer to the given equation.</string>
    <string name="seconds">2:02</string>
    <string name="milli_second">.019</string>
    <string name="incorrect">1</string>
    <string name="incorrect_description">A cross to indicate questions guessed incorrectly.</string>
    <string name="timer_description">A stop clock icon to indicate the time left.</string>
</resources>