<?xml version="1.0" encoding="utf-8"?>
<!--TODO Add descriptions for icons and images, update text-->
<androidx.constraintlayout.widget.ConstraintLayout
    android:id="@+id/cl_settings"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:ads="http://schemas.android.com/apk/res-auto"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <com.google.android.material.appbar.AppBarLayout
        android:theme="@style/AppTheme.AppBarOverlay"
        android:id="@+id/ab_header"
        android:fitsSystemWindows="true"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.Toolbar
            android:id="@+id/tb_toolbar"
            android:layout_width="fill_parent"
            android:layout_height="?actionBarSize"
            app:layout_collapseMode="pin"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:popupTheme="@style/AppTheme.PopupOverlay">

            <ImageButton
                android:id="@+id/ibtn_back"
                android:layout_width="48dp"
                android:layout_height="48dp"
                android:layout_gravity="start|center_vertical"
                android:background="?attr/selectableItemBackgroundBorderless"
                android:contentDescription="@string/back_arrow_description"
                android:layout_marginStart="8dp"
                android:src="@drawable/ic_back_arrow"
                app:tint="@color/white_atts" />

            <TextView
                android:id="@+id/tv_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:paddingStart="8dp"
                android:text="@string/app_name"
                android:textColor="@color/white_atts"
                android:textSize="20.0sp" />
        </androidx.appcompat.widget.Toolbar>
    </com.google.android.material.appbar.AppBarLayout>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/ab_header">

        <Switch
            android:id="@+id/switch_auto_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text=""
            app:layout_constraintBottom_toTopOf="@id/v_auto_answer"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        
        <TextView
            android:id="@+id/tv_auto_answer"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/auto_answer"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />
        
        <TextView
            android:id="@+id/tv_auto_answer_description"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/auto_answer_description"
            app:layout_constraintEnd_toStartOf="@id/switch_auto_answer"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_auto_answer" />
        
        <View
            android:id="@+id/v_auto_answer"
            style="@style/HorizontalLine"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_auto_answer_description" />
        
        <TextView
            android:id="@+id/tv_sound"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/sound"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_auto_answer" />
        
        <TextView
            android:id="@+id/tv_sound_description"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/sound_description"
            app:layout_constraintEnd_toStartOf="@id/cb_sound"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sound" />
        
        <CheckBox
            android:id="@+id/cb_sound"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/cb_sound"
            android:button="@null"
            app:layout_constraintBottom_toTopOf="@id/v_sound"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_auto_answer" />
        
        <View
            android:id="@+id/v_sound"
            style="@style/HorizontalLine"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sound_description" />
        
        <TextView
            android:id="@+id/tv_vibration"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/vibration"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_sound" />
        
        <TextView
            android:id="@+id/tv_vibration_description"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/vibration_description"
            app:layout_constraintEnd_toStartOf="@id/cb_vibration"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_vibration" />
        
        <CheckBox
            android:id="@+id/cb_vibration"
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:background="@drawable/cb_vibration"
            android:button="@null"
            app:layout_constraintBottom_toTopOf="@id/v_vibration"
            app:layout_constraintDimensionRatio="1:1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_sound" />
        
        <View
            android:id="@+id/v_vibration"
            style="@style/HorizontalLine"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_vibration_description" />

        <com.google.android.gms.common.SignInButton
            android:id="@+id/sibtn_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            app:layout_constraintBottom_toTopOf="@id/v_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_vibration" />

        <Button
            android:id="@+id/btn_sign_out"
            style="@style/Widget.AppCompat.Button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:background="@color/white_atts"
            android:text="@string/sign_out"
            android:textAllCaps="false"
            android:textColor="#ff6e6e6e"
            android:textStyle="bold"
            android:visibility="gone"
            app:layout_constraintBottom_toTopOf="@id/v_sign_in"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_vibration" />
        
        <TextView
            android:id="@+id/tv_sign_in"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/sign_in"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_vibration" />
        
        <TextView
            android:id="@+id/tv_sign_in_description"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/sign_in_description"
            app:layout_constraintEnd_toStartOf="@id/sibtn_sign_in"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_in" />
        
        <View
            android:id="@+id/v_sign_in"
            style="@style/HorizontalLine"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_sign_in_description" />
        
        <TextView
            android:id="@+id/tv_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/reset"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_sign_in" />
        
        <TextView
            android:id="@+id/tv_reset_description"
            android:layout_width="0.0dip"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/reset_description"
            app:layout_constraintEnd_toStartOf="@id/btn_reset"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_reset" />
        
        <View
            android:id="@+id/v_reset"
            style="@style/HorizontalLine"
            android:layout_marginTop="10dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/tv_reset_description" />
        
        <Button
            android:id="@+id/btn_reset"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="@string/reset"
            app:layout_constraintBottom_toTopOf="@id/v_reset"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/v_sign_in" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</androidx.constraintlayout.widget.ConstraintLayout>